responsive margins and paddings; preventing friends photos from being wrapped.

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -374,6 +374,10 @@
     margin-right: auto;
   }
 
+  &__friends {
+    display: flex;
+  }
+
   &__photo {
     box-sizing: content-box;
     height: 4rem;
@@ -395,6 +399,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -454,6 +463,10 @@
   padding: 3.5rem 0;
   text-align: center;
   flex: 0 0 100%;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
